--- a/wwr/about.html
+++ b/wwr/about.html
@@ -6,80 +6,83 @@
     <meta name="description" content="About us page for the White Water Rafting Company">
     <meta name="author" content="Seth Taylor">
     <title>White Water Rafting: About Us</title>
-    <link rel="stylesheet" href="styles/rafting.css">
+    <link rel="stylesheet" href="styles/oneflex.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Afacad+Flux:wght@100;200;300;400;500;600;700;800;900&family=Lora:ital,wght@0,400;1,400&family=Roboto+Slab:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Afacad+Flux:wght@100..1000&family=Lora:ital,wght@0,400..700;1,400..700&family=Roboto+Slab:wght@100..900&display=swap" rel="stylesheet">
 </head>
+
 <body>
     <header>
-        <div class="nav-container">
-            <div class="logo-container">
+        <div class="nav">
+            <div class="grid-item">
                 <img class="logo" src="wwrimages/raftinglogo.png" alt="Rafting Logo">
             </div>
-            <nav class="nav">
-                <div class="nav-item"><a href="index.html">Index</a></div>
-                <div class="nav-item"><a href="about.html">About</a></div>
-                <div class="nav-item"><a href="trips.html">Trips</a></div>
-                <div class="nav-item"><a href="contact.html">Contact</a></div>
-            </nav>
+                <nav class="nav">
+                    <div class="grid-item"><a href="#">Index</a></div> 
+                    <div class="grid-item"><a href="#">About Us</a></div> 
+                    <div class="grid-item"><a href="#">Trips</a></div>
+                    <div class="grid-item"><a href="#">Contact Us</a></div>
+                </nav>
         </div>
     </header>
     <main>
         <section>
-            <div class="container">
-                <h1>White Water Rafting</h1>
+            <div class="container2">
+                <div class="two">
+                    <h1>White Water Rafting</h1>
+                </div>
+            </div>
                 <div class="wwrtext">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima incidunt facilis quis porro sunt, iusto maxime, atque explicabo eos tenetur distinctio beatae vel deleniti fugiat ullam qui officia. Aperiam, tenetur.</p>
-                    <img class="family" src="wwrimages/happyfamily.jpg" alt="Happy Family">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima incidunt facilis quis porro sunt, iusto maxime, atque explicabo eos tenetur distinctio beatae vel deleniti fugiat ullam qui officia. Aperiam, tenetur.</p><p><img class="family" src="wwrimages/happyfamily.jpg"></p>
                 </div>
-            </div>
+                <p></p>
         </section>
         <section>
-            <div class="container">
-                <h2>History</h2>
-                <div class="historytext">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima incidunt facilis quis porro sunt, iusto maxime, atque explicabo eos tenetur distinctio beatae vel deleniti fugiat ullam qui officia. Aperiam, tenetur.</p>
-                    <img class="hero" src="wwrimages/hero.jpg" alt="Hero Image">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit tempora eaque expedita fugit voluptatibus cupiditate, asperiores recusandae velit earum autem dolorem corporis sed iure. Magnam deleniti sint rerum assumenda nulla.</p>
+                <div class="container3">
+                        <h2>History</h2>
                 </div>
-            </div>
-        </section>
+                    <div class="historytext">
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima incidunt facilis quis porro sunt, iusto maxime, atque explicabo eos tenetur distinctio beatae vel deleniti fugiat ullam qui officia. Aperiam, tenetur.</p><p><img class="hero" src="wwrimages/hero.jpg"></p>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit tempora eaque expedita fugit voluptatibus cupiditate, asperiores recusandae velit earum autem dolorem corporis sed iure. Magnam deleniti sint rerum assumenda nulla?>
+                    </div>
+                    <p>
         <section>
-            <div class="container">
-                <h2>Adventure Awaits You</h2>
-                <div class="gallery">
-                    <figure>
-                        <img class="rafting" src="wwrimages/rafting1.jpg" alt="Rafting 1">
-                        <figcaption>Rafting 1</figcaption>
-                    </figure>
-                    <figure>
-                        <img class="rafting" src="wwrimages/rafting2.jpg" alt="Rafting 2">
-                        <figcaption>Rafting 2</figcaption>
-                    </figure>
-                    <figure>
-                        <img class="rafting" src="wwrimages/rafting3.jpg" alt="Rafting 3">
-                        <figcaption>Rafting 3</figcaption>
-                    </figure>
-                    <figure>
-                        <img class="rafting" src="wwrimages/rafting4.jpg" alt="Rafting 4">
-                        <figcaption>Rafting 4</figcaption>
-                    </figure>
-                    <figure>
-                        <img class="rafting" src="wwrimages/rafting5.jpg" alt="Rafting 5">
-                        <figcaption>Rafting 5</figcaption>
-                    </figure>
+                    <div class="container4">
+                        <h1>Adventure Awaits You</h1>
+                    </div>
+                    <div class="container4">
+                        <p> 
+                            <figure>
+                               <img class="rafting" src="wwrimages/rafting1.jpg" alt="Rafting 1">
+                               <figcaption class="fig">rafting 1</figcaption>
+                            </figure>
+                            <figure>
+                                <img class="rafting" src="wwrimages/rafting2.jpg" alt="Rafting 2">
+                                <figcaption class="fig">rafting 2</figcaption>
+                            </figure>
+                            <figure>
+                                <img class="rafting" src="wwrimages/rafting3.jpg" alt="Rafting 3">
+                                <figcaption class="fig">rafting 3</figcaption>
+                            </figure>
+                            <figure>
+                                <img class="rafting" src="wwrimages/rafting4.jpg" alt="Rafting 4">
+                                <figcaption class="fig">rafting 4</figcaption>
+                            </figure>
+                            <figure>
+                                <img class="rafting" src="wwrimages/rafting5.jpg" alt="Rafting 5">
+                                <figcaption class="fig">rafting 5</figcaption>
+                            </figure>
+                        </p>
                 </div>
-            </div>
         </section>
     </main>
     <footer>
-        <p>©2024 White Water Rafting | Seth Taylor</p>
-        <div>
-            <a href="https://facebook.com"><img class="size" src="wwrimages/FB.png" alt="Follow us on Facebook"></a>
-            <a href="https://x.com"><img class="size" src="wwrimages/x.png" alt="Follow us on X"></a>
-            <a href="https://instagram.com"><img class="size" src="wwrimages/insta.png" alt="Follow us on Instagram"></a>
-        </div>
+        <h2 class="footer">©2024 White Water Rafting | Seth Taylor 
+            <a href="https://facebook.com"><img class="size" src="wwrimages/FB.png" alt="Facebook"></a>
+            <a href="https://x.com"><img class="size" src="wwrimages/x.png" alt="Facebook"></a>
+            <a href="https://instagram.com"><img class="size" src="wwrimages/insta.png" alt="Facebook"></a>
+        </h2>
     </footer>
 </body>
 </html>
