--- a/wwr/about.html
+++ b/wwr/about.html
@@ -34,7 +34,7 @@
                 </div>
             </div>
                 <div class="wwrtext">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima incidunt facilis quis porro sunt, iusto maxime, atque explicabo eos tenetur distinctio beatae vel deleniti fugiat ullam qui officia. Aperiam, tenetur.</p><p><img class="family" src="wwrimages/happyfamily.jpg"></p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima incidunt facilis quis porro sunt, iusto maxime, atque explicabo eos tenetur distinctio beatae vel deleniti fugiat ullam qui officia. Aperiam, tenetur.</p><p><img class="family" src="wwrimages/happyfamily.jpg" alt="family"></p>
                 </div>
                 <p></p>
         </section>
@@ -43,16 +43,16 @@
                         <h2>History</h2>
                 </div>
                     <div class="historytext">
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima incidunt facilis quis porro sunt, iusto maxime, atque explicabo eos tenetur distinctio beatae vel deleniti fugiat ullam qui officia. Aperiam, tenetur.</p><p><img class="hero" src="wwrimages/hero.jpg"></p>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima incidunt facilis quis porro sunt, iusto maxime, atque explicabo eos tenetur distinctio beatae vel deleniti fugiat ullam qui officia. Aperiam, tenetur.</p><p><img class="hero" src="wwrimages/hero.jpg" alt="hero"></p>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit tempora eaque expedita fugit voluptatibus cupiditate, asperiores recusandae velit earum autem dolorem corporis sed iure. Magnam deleniti sint rerum assumenda nulla?>
                     </div>
                     <p>
+        </section>
         <section>
                     <div class="container4">
-                        <h1>Adventure Awaits You</h1>
+                        <h2>Adventure Awaits You</h2>
                     </div>
-                    <div class="container4">
-                        <p> 
+                    <div class="container4"> 
                             <figure>
                                <img class="rafting" src="wwrimages/rafting1.jpg" alt="Rafting 1">
                                <figcaption class="fig">rafting 1</figcaption>
@@ -73,16 +73,24 @@
                                 <img class="rafting" src="wwrimages/rafting5.jpg" alt="Rafting 5">
                                 <figcaption class="fig">rafting 5</figcaption>
                             </figure>
-                        </p>
                 </div>
         </section>
     </main>
     <footer>
-        <h2 class="footer">©2024 White Water Rafting | Seth Taylor 
-            <a href="https://facebook.com"><img class="size" src="wwrimages/FB.png" alt="Facebook"></a>
-            <a href="https://x.com"><img class="size" src="wwrimages/x.png" alt="Facebook"></a>
-            <a href="https://instagram.com"><img class="size" src="wwrimages/insta.png" alt="Facebook"></a>
-        </h2>
+        <footer class="footer">
+            <p>© 2024 White Water Rafting | Seth Taylor</p>
+            <div class="social-links">
+                <a href="https://facebook.com" aria-label="Facebook">
+                    <img class="size" src="wwrimages/FB.png" alt="Facebook Logo">
+                </a>
+                <a href="https://x.com" aria-label="X (formerly Twitter)">
+                    <img class="size" src="wwrimages/x.png" alt="X Logo">
+                </a>
+                <a href="https://instagram.com" aria-label="Instagram">
+                    <img class="size" src="wwrimages/insta.png" alt="Instagram Logo">
+                </a>
+            </div>
+        </footer>
     </footer>
 </body>
 </html>
